// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": null,
      "borderColor": "#E0E0E0",
      "borderRadius": 20,
      "borderWidth": 1,
      "display": "flex",
      "marginLeft": 16,
      "opacity": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
  testID="Var1"
>
  <Text
    style={
      Array [
        Object {
          "color": "#787D87",
          "display": "flex",
          "fontSize": 14,
          "lineHeight": 18,
        },
      ]
    }
    testID={null}
  >
    Var1
  </Text>
</View>
`;

exports[`Chip 2`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#B8D5F9",
      "borderColor": "#5396EE",
      "borderRadius": 20,
      "borderWidth": 1,
      "display": "flex",
      "marginLeft": 16,
      "opacity": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
  testID="Var1"
>
  <Text
    style={
      Array [
        Object {
          "color": "#092D5D",
          "display": "flex",
          "fontSize": 14,
          "lineHeight": 18,
        },
      ]
    }
    testID="selected"
  >
    Var1
  </Text>
</View>
`;
